[package]
name = "pitch-corrector"
version = "0.1.0"
authors = ["Walter Smuts <wssmts@amazon.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
cpal = "0.13"
ansi-escapes = "0.1"
crossbeam-queue = "0.3"
termion = "1.5"
ctrlc = "3.2"
apodize = "1.0.0"
tui = "0.19.0"
crossterm = "0.24.0"
tui-logger = "0.8.0"
log-panics = "2.1.0"
log = "0.4.17"
easyfft = "0.3"
array-append = "0.1.0"

[dev-dependencies]
rand = "0.8.5"
approx = "0.5.1"
