[package]
name = "pitch-corrector"
version = "0.1.0"
authors = ["Walter Smuts <wssmts@amazon.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cpal = "0.17"
ansi-escapes = "0.2"
crossbeam-queue = "0.3"
termion = "4.0"
ctrlc = "3.4"
apodize = "1.0.0"
bitflags = "2"
ratatui = "0.29"
crossterm = "0.29"
tui-logger = "0.17"
log-panics = "2.1.0"
log = "0.4"
easyfft = "0.4.2"


[dev-dependencies]
rand = "0.9"
approx = "0.5.1"
assert_no_alloc = { version = "1.1", features = ["warn_debug"] }
